--- a/users/templates/hospedaje/editar_hotel.html
+++ b/users/templates/hospedaje/editar_hotel.html
@@ -1,1 +1,14 @@
-<h1>Editar hotel</h1>
+{% extends 'base.html' %}
+{% block title %} Editar hotel {% endblock %}
+
+{% block body %}
+<div class="card">
+    <div class="card-header">
+        Editar un Hotel
+    </div>
+    <div class="card-body">
+        <h4 class="card-title">Datos del Hotel</h4>
+        {% include 'hospedaje/form.html' %}
+    </div>
+</div>
+{% endblock %}
