Se crean las vista de hospedaje 2 y las cards de ejemplo

--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -20,6 +20,9 @@
                 <a class="nav-link" href="{% url 'hospedaje' %}">Hospedaje</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="{% url 'hospedaje2' %}">Hospedaje2</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Restaurantes
                 </a>
