se soluciona problema para mostrar imagenes

--- a/users/templates/hospedaje/hospedaje.html
+++ b/users/templates/hospedaje/hospedaje.html
@@ -25,6 +25,11 @@
                         <tr>
                             <td>{{forloop.counter}}</td>
                             <td>{{ hotel.imagen }}</td>
+                            <td>
+                                <div>                                 
+                                    <img src="media/{{hotel.imagen}}" width="100" alt="">
+                                </div>
+                            </td>
                             <td>{{ hotel.nombre }}</td>
                             <td>{{ hotel.precio }}</td>
                             <td>{{ hotel.puntaje }}</td>
