login, registro creado exitosamente. Adema se crea la seguridad en las vistas con login view

--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -210,7 +210,8 @@
                         location.reload();
                     },
                     error: function(){
-                        alert('hubo un error')
+                        
+                        alert('Username ya existe')
                     }
                 })
             }
