Se estable la img

--- a/users/templates/hospedaje/cards.html
+++ b/users/templates/hospedaje/cards.html
@@ -45,7 +45,7 @@
                     <div class="row g-0">
         
                         <div class="col-sm-5" style="background: #868e96;">
-                            <img src="https://picsum.photos/150?image=641" class="card-img-top h-100" alt="...">
+                            <img src="media/{{hotel.imagen}}" class="card-img-top h-100" alt="...">
                         </div>
                         <div class="col-sm-7">
                             <div class="card-body">
