--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -23,7 +23,7 @@
                 <a class="nav-link" href="{% url 'hospedaje2' %}">Hospedaje2</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link" href="{% url 'restaurantes' %}">
                   Restaurantes
                 </a>
                 <!-- <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -34,7 +34,7 @@
                 </ul> -->
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled">Para hacer</a>
+                <a href="{% url 'para_hacer' %}" class="nav-link">Para hacer</a>
               </li>
             </ul>
             <form class="d-flex">
@@ -65,7 +65,8 @@
                 {% endfor %}
             </ul>
         {% endif %}
-        <div class="container" style=" border: 1px solid #000000;">
+        <!-- style=" border: 1px solid #000000;" -->
+        <div class="container" >
           {% block body %}
 
           {% endblock %}
