--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -19,9 +19,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'hospedaje' %}">Hospedaje</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'hospedaje2' %}">Hospedaje2</a>
-              </li>
+              {% if request.user.is_superuser %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'hospedaje2' %}">Hospedaje2</a>
+                </li>
+              {% endif %}
+             
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'restaurantes' %}">
                   Restaurantes
