--- a/users/templates/hospedaje/cards.html
+++ b/users/templates/hospedaje/cards.html
@@ -14,31 +14,6 @@
 
     {% if hotels %}
         {% for hotel in hotels %}
-            <div class="col-6">
-                <div class="card" style="max-width: 500px;">
-                    <div class="row g-0">
-                        <div class="col-sm-5" style="background: #868e96;">
-                            <img src="media/{{hotel.imagen}}" class="card-img-top h-100" alt="...">
-                        </div>
-                        <div class="col-sm-7">
-                            <div class="card-body">
-                                <h5 class="card-title">{{hotel.nombre}}</h5>
-                                <p class="card-text">
-                                    <p> 4 Days</p>
-                                    <p>2 Adults</p>
-                                    <p>{{hotel.puntaje}}</p>
-                                    <p>{{hotel.precio}}</p>
-                                </p>
-                                <a href="#" class="btn btn-primary stretched-link">Visitar</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        {% endfor %}
-            <h2>Segunda opción</h2>
-        {% for hotel in hotels %}
             <div class="col-6 pt-4">
                 <div class="card " style="max-width: 500px;">
         
@@ -82,7 +57,7 @@
                                 </p>
         
         
-                                <a href="#" class="btn btn-primary stretched-link">Visitar</a>
+                                <a href="#" class="btn btn-primary stretched-link">Calificar</a>
                             </div>
                         </div>
                     </div>
