--- a/users/templates/index.html
+++ b/users/templates/index.html
@@ -6,7 +6,7 @@
    <div class="row">
     <div class="col-4">
         <div class="card" style="width: 18rem;">
-            <a href="{% url 'hospedaje' %}">
+            <a href="{% url 'hospedaje2' %}">
                 <img src="https://i.imgur.com/nRDNGre.png" class="card-img-top" alt="img-playas baru">
                 <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
