--- a/users/templates/Paginas/actividades/para_hacer.html
+++ b/users/templates/Paginas/actividades/para_hacer.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'index/base.html' %}
 {% block title %} para hacer {% endblock %}
 {% block body %}
 <h1>Para hacer</h1>
