--- a/users/templates/index/index.html
+++ b/users/templates/index/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'index/base.html' %}
 {% load static%}
 {% block body %}
     <link rel="stylesheet" href="{% static 'css/cards.css' %}">
