Organizacion de vistas

--- a/users/templates/Paginas/hospedajeAdmin/crear_hotel.html
+++ b/users/templates/Paginas/hospedajeAdmin/crear_hotel.html
@@ -8,7 +8,7 @@
     </div>
     <div class="card-body">
         <h4 class="card-title">Datos del Hotel</h4>
-        {% include 'hospedaje/form.html' %}
+        {% include 'paginas/hospedajeAdmin/form.html' %}
     </div>
 </div>
 {% endblock %}
