--- a/users/templates/index/base.html
+++ b/users/templates/index/base.html
@@ -18,12 +18,12 @@
               </li>
               {% if request.user.is_superuser %}
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'hospedaje' %}">Hospedaje</a>
+                  <a class="nav-link" href="{% url 'hospedaje2' %}">Hospedaje Admin</a>
                 </li>
               {% endif %}
            
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'hospedaje2' %}">Hospedaje2</a>
+                  <a class="nav-link" href="{% url 'hospedaje' %}">Hospedaje</a>
                 </li>
              
              
