--- a/users/templates/profile/profile.html
+++ b/users/templates/profile/profile.html
@@ -1,89 +1,121 @@
 {% extends 'index/base.html' %}
 {% block body %}
-    <h1>Este es el perfil</h1> <br><br>
+<h1>Este es el perfil</h1> <br><br>
 
-    <div class="container">
-        <div class="main-body">
-              <!-- /Breadcrumb -->
-        
-              <div class="row gutters-sm">
-                <div class="col-md-4 mb-3">
-                  <div class="card">
+<div class="container">
+    <div class="main-body">
+        <!-- /Breadcrumb -->
+
+        <div class="row gutters-sm">
+            <div class="col-md-4 mb-3">
+                <div class="card">
                     <div class="card-body">
-                      <div class="d-flex flex-column align-items-center text-center">
-                        <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
-                        <div class="mt-3">
-                          <h4>{{ request.user.first_name }}</h4>
-                          <p class="text-secondary mb-1">Software programmer</p>
-                          <button class="btn btn-outline-primary">Edit</button>
+                        <div class="d-flex flex-column align-items-center text-center">
+                            <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
+                                class="rounded-circle" width="150">
+                            <div class="mt-3">
+                                <h4>{{ request.user.first_name }}</h4>
+                                <p class="text-secondary mb-1">Software programmer</p>
+                                <button class="btn btn-outline-primary" data-bs-toggle="modal"
+                                    data-bs-target="#staticBackdrop">Edit</button>
+                            </div>
                         </div>
-                      </div>
                     </div>
-                  </div>
-              
                 </div>
-                {% if user %}
-                    
-                        <div class="col-md-8">
-                            <div class="card mb-3">
-                            <div class="card-body">
-                                <div class="row">
-                                <div class="col-sm-3">
-                                    <h6 class="mb-0">Nombre</h6>
-                                </div>
-                                <div class="col-sm-9 text-secondary">
-                                    {{user.firt_name}}
-                                </div>
-                                </div>
-                                <hr>
-                                <div class="row">
-                                <div class="col-sm-3">
-                                    <h6 class="mb-0">Email</h6>
-                                </div>
-                                <div class="col-sm-9 text-secondary">
-                                    fip@jukmuh.al
-                                </div>
-                                </div>
-                                <hr>
-                                <div class="row">
-                                <div class="col-sm-3">
-                                    <h6 class="mb-0">Phone</h6>
-                                </div>
-                                <div class="col-sm-9 text-secondary">
-                                    (239) 816-9029
-                                </div>
-                                </div>
-                                <hr>
-                                <div class="row">
-                                <div class="col-sm-3">
-                                    <h6 class="mb-0">Mobile</h6>
-                                </div>
-                                <div class="col-sm-9 text-secondary">
-                                    (320) 380-4539
-                                </div>
-                                </div>
-                                <hr>
-                                <div class="row">
-                                <div class="col-sm-3">
-                                    <h6 class="mb-0">Address</h6>
-                                </div>
-                                <div class="col-sm-9 text-secondary">
-                                    Bay Area, San Francisco, CA
-                                </div>
-                                </div>
-                                <hr>
-                                <div class="row">
-                                <div class="col-sm-12">
-                                    <a class="btn btn-info " target="__blank" href="https://www.bootdey.com/snippets/view/profile-edit-data-and-skills">Edit</a>
-                                </div>
-                                </div>
+            </div>
+            {% if user %}
+
+            <div class="col-md-8">
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <h6 class="mb-0">Nombre</h6>
                             </div>
+                            <div class="col-sm-9 text-secondary">
+                                {{user.user.first_name}} {{user.user.last_name}}
                             </div>
-            
                         </div>
-                  
-                {% endif %}
-    
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <h6 class="mb-0">Email</h6>
+                            </div>
+                            <div class="col-sm-9 text-secondary">
+                                {{user.user.email}}
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <h6 class="mb-0">Télefono</h6>
+                            </div>
+                            <div class="col-sm-9 text-secondary">
+                                {{user.telefono}}
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <h6 class="mb-0">Fecha nacimiento</h6>
+                            </div>
+                            <div class="col-sm-9 text-secondary">
+                                {{user.fecha_nacimiento}}
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <h6 class="mb-0">Dirección</h6>
+                            </div>
+                            <div class="col-sm-9 text-secondary">
+                                {{user.lugar_recidencia}}
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <a class="btn btn-info " target="__blank" href="">Edit</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            {% endif %}
+
+        </div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">Subir imagen de perfil</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                   <form action="{% url 'subir_img_perfil' %}" method="POST" enctype="multipart/form-data"> {% csrf_token %}
+                        <div class="mb-3">
+                            <label for="formFile" class="form-label">Default file input example</label>
+                            <input class="form-control" type="file" name="picture" id="picture">
+                        </div>
+
+
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                            <button type="submit" class="btn btn-primary">Subir</button>
+                        </div>
+                   </form>
+                      
+                </div>
+                
             </div>
         </div>
-{% endblock %}
+    </div>
+
+
+    {% endblock %}
